2011-08-14  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize, calculate_balloonmaxheight):
	further code cleanups

2011-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize): just call avt_change_avatar_image

2011-08-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c: smaller SHADOWOFFSET

	* avatar.c (avt_mb_decode_buffer, avt_mb_encode_buffer):
	make sure there is room for a terminator
	no error if buffer is too small - just put in as much as fits

2011-08-11  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (lavt_launch => avt.launch): new function

2011-08-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, avtterm.c (avta_term_send_literal): new macro

	* avtterm.c:
	fix key F7, more refactoring
	some code for mouse support (deactivated by default)
	workaround: reset instead switching alternate-screens
	optimize mode switches
	support switching autowrap mode (CSI ? 7 h)

	* avatar.c (avt_initialize): don't ignore mouse button releases

2011-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c: refactoring

2011-08-08  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_mb_decode_buffer, avt_mb_encode_buffer):
	new functions
	(avt_mb_decode, avt_mb_encode): adapted

	* avtterm.c: optimization: use static buffer

	* lua/terminal.lua: no avatar

2011-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_say_mb_len, avt_decode): fixes

2011-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* configure:
	fix config-mingw
	search lua in /usr/local/cross-tools/i386-mingw32/

2011-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_say_mb_len, avt_say_mb):
	do the charset conversion directly in avt_say_mb_len
	=> optimization: far less mallocs

	* avatar.c (avt_tell_mb): call avt_tell_mb_len

	* mingw/iconv.h, mingw/win_iconv.c:
	remove const from **inbuf

2011-07-23  Andreas K. Foerster  <info@akfoerster.de>
