@@ -1,3 +1,8 @@
+2011-08-15  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar.c (avt_recode_buffer): new function
+	(avt_set_title): adapted
+
 2011-08-14  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatar.c (avt_initialize, calculate_balloonmaxheight):
